--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="p-5 sm:p-8 bg-[#B09356] text-center h-full">
 					<h2 class="title" data-aos="fade-right">Jadwal Shalat</h2>
 					<div data-aos="fade-right" data-aos-delay="100">
-						<script type="text/javascript" src="http://www.muslimpro.com/muslimprowidget.js?cityid=1642911&language=id"
+						<script type="text/javascript" src="https://www.muslimpro.com/muslimprowidget.js?cityid=1642911&language=id"
 							async></script>
 					</div>
 				</div>
