--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 							</div>
 						</div>
 						<div id="navbar-collapse-with-animation"
-							class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow lg:block bg-cgreen lg:bg-transparent pl-5 lg:mt-0 lg:py-0"
-							data-aos="fade-down">
+							class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow lg:block bg-cgreen lg:bg-transparent pl-5 lg:mt-0 lg:py-0">
 							<div class="flex flex-col gap-5 lg:flex-row lg:items-center lg:justify-center py-4">
 								<a class="font-medium text-cyellow underline underline-offset-4" href="/">Beranda</a>
 								<a class="font-medium text-white hover:text-cyellow duration-300" href="#tentang-kami">Tentang Kami</a>
