--- a/index.html
+++ b/index.html
@@ -704,8 +704,7 @@
 			</div>
 		</div>
 		<div class="overflow-hidden">
-			<div id="copyright" class="border-t py-8 mt-8 border-neutral-800 text-center text-sm text-neutral-600 px-5"
-				data-aos="fade-up">
+			<div id="copyright" class="border-t py-8 mt-8 border-neutral-800 text-center text-sm text-neutral-600 px-5">
 
 			</div>
 		</div>
